connection string change

--- a/Nudge/Web.config
+++ b/Nudge/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="NudgeConnectionString" connectionString="Data Source=E-WIN7-PC\SQLEXPRESS;Initial Catalog=Nudge;User ID=sa;Password=sa@9999"
+    <add name="NudgeConnectionString" connectionString="Data Source=WIN-5MRTV3OTOG6\SQLEXPRESS;Initial Catalog=Nudge;User ID=ledian;Password=TopBins98@"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
